feat: Adicionando a validação dos campos do DTO através de um handler
